Fixing spacing for Pilota

--- a/css/index.css
+++ b/css/index.css
@@ -333,7 +333,7 @@
 .pilota {
   max-width: 106%;
   margin-top: 2vw;
-  margin-left: -1vw;
+  margin-left: 0vw;
 }
 
 .cress {
